tests/valid/trait/trait_own_bound_satisfied.facet
trait Show;
trait Convert<T> where T: Show;

struct Box {
  value: affine isize
}

impl Show for affine isize;
impl Convert<affine isize> for affine Box;

fn main() -> unrestricted () {
  ()
}
