tests/invalid/trait/bound_trait_arg_extra.facet
trait Convert<T>;

struct Box<T> where T: Convert<affine isize, affine bool> {
  value: affine T
}

fn main() -> unrestricted () {
  ()
}
